# aula11-15_bootcamp

./: csv-class.py  csv_test.py  exemplo.csv  exemplo2.csv  pyproject.toml  usar_csv.py
src/interface/classes/: csv_class.py
